# posluznik

./: .bazelrc  .gitignore  .rustfmt.toml  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  README.md  conanfile.py
.github/workflows/: codeql.yml
src/: chrome_control.rs  chrome_debug_api_response.rs  configuration.rs  main.rs  printer.rs  stdio_html_request_parser.rs
test_package/: conanfile.py
