[package]
name = "posluznik"
version = "1.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level=1
debug=1

[profile.release]
panic = 'abort'
strip = 'symbols'
opt-level = 's'
lto = 'thin'

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.7", features = ["derive"] }
color-print = { version = "0.3.5", features = ["terminfo"] }
futures-util = "0.3.29"
libc = "0.2.150"
percent-encoding = "2.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "net", "process", "signal"] }
tokio-tungstenite = "0.20.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }
